--- a/VRChat/15/1221215.html
+++ b/VRChat/15/1221215.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "QxOyGyHAvODkuKscry1j4GpFvE4nRgJltmhvE5O/t58="></script>
+    "+LfaKlGZppbjgfN6P4/GYVon0yey2dXmjdOVjspNXGU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[vrchat向けアクセサリー]マスク[3dmodel]","description":"インフル流行ってるやん。\nというわけでマスク配ります。\nボーン仕込んであるので、大抵のモデルにはフィットすると思います。\n\n\n※本製品はVRChat等アプリケーション、ゲームでの使用を想定しております。\n\n\nフォルダ構成\n・mask.fbx（モデルデータ本体）\n・mask.png（テクスチャデータ）\n・mask.unitypackage（Unityに簡単にインポートできるやつ）\n・Readme.txt（再配布・転売しないでねとか書いてる）","url":"https://booth.pm/ja/items/1221215","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/af408fff-8f2f-4597-bdb6-d798cc3f700e/i/1221215/115fd2f5-b9b1-48f2-93ed-e03b06463078_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QxOyGyHAvODkuKscry1j4GpFvE4nRgJltmhvE5O/t58="></script>
+    nonce="+LfaKlGZppbjgfN6P4/GYVon0yey2dXmjdOVjspNXGU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -159,7 +159,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              302
+                              303
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,7 +174,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              302
+                              303
                             </div>
                           </div></a>
                         </div>
@@ -510,7 +510,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
